--- a/src/StyleComponents/home.css
+++ b/src/StyleComponents/home.css
@@ -1,25 +1,47 @@
-body {
-    overflow-x: hidden;
-    margin: 0;
-    display: flex;
+.home {
+  text-align: center;
 }
 
-.home{
-    text-align: center;
+div.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  margin: 15px;
 }
 
-.links{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    height: 100%;
-    width: 100%;
-    margin: 15px;
+div.links a {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  margin: 15px auto;
 }
 
-.main-container{
-    width: 100vw;
-    height: 250px;
-    background-color: rgb(105, 105, 105);
-    color: black;
+.main-container {
+  align-items: center;
+  width: 100%;
+  height: 300px;
+  border: solid 1px #e7e7e7;
+  border-radius: 70px;
+}
+
+h1 {
+  text-align: center;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+li {
+  list-style: none;
+}
+
+ul img {
+  padding: 10px;
 }
